Lab3 has been completed

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/card_margin"
         style="@style/CardViewStyleLightGreen"
-        android:onClick="CardClick">
+        android:onClick="onCardClick">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -65,7 +65,7 @@
         style="@style/CardViewStyleLightGreen"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:onClick="CardClick"
+        android:onClick="onCardClick"
         android:layout_margin="@dimen/card_margin">
 
         <!-- Для расположения элементов внутри CardView использовать ConstraintLayout -->
@@ -117,7 +117,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/card_margin"
-        android:onClick="CardClick"
+        android:onClick="onCardClick"
         style="@style/CardViewStyleLightGreen">
 
         <!-- Для расположения элементов внутри CardView использовать LinearLayout -->
