--- a/app/src/main/res/layout/activity_theater.xml
+++ b/app/src/main/res/layout/activity_theater.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="@dimen/layout_padding"
-    tools:context=".TheaterActivity">
+    tools:context=".activity.TheaterActivity">
 
     <ImageView
         android:id="@+id/theater_image_view_details"
